Favicon, title and meta tags

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img/github.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <meta name="description" content="GitList es un clon de GitHub desarrollado en React | Diseño obtenido de LeonidasEsteban.com">
+    <meta property="og:title" content="iJCode1 - GitList" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://git-list-lyart.vercel.app/"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/iJCode1/GitList/main/src/assets/img/gitlist.png"/>
+    <meta property="og:description" content="GitList es un clon de GitHub desarrollado en React | Diseño obtenido de LeonidasEsteban.com"/>
+    <link rel="shortcut icon" href="./assets/icons/logotipo.webp" type="image/x-icon">
+    <title>iJCode1 - GitList</title>
   </head>
   <body>
     <div id="root"></div>
